--- a/static/admin.html
+++ b/static/admin.html
@@ -89,6 +89,9 @@
         .btn-outline-secondary { color: var(--text-muted-color); border-color: var(--text-muted-color); }
         .btn-outline-secondary:hover { color: #fff; background-color: var(--text-muted-color); }
 
+        .btn-outline-warning { color: #f7b731; border-color: #f7b731; }
+        .btn-outline-warning:hover { color: #fff; background-color: #f7b731; }
+
         .form-control, .form-select {
             background-color: var(--bg-color);
             border: 1px solid var(--border-color);
@@ -195,6 +198,7 @@
             <!-- Toolbar -->
             <div class="mb-3 d-flex flex-wrap gap-2">
                 <button class="btn btn-outline-primary btn-sm" id="scan-all-btn" onclick="scanAllKeys()"><i class="bi bi-broadcast"></i> 扫描所有启用Key</button>
+                <button class="btn btn-outline-warning btn-sm" id="scan-disabled-btn" onclick="scanAllDisabledKeys()"><i class="bi bi-recycle"></i> 扫描所有禁用Key</button>
                 <button class="btn btn-outline-info btn-sm" id="check-selected-btn" onclick="checkSelectedKeys()"><i class="bi bi-check-circle"></i> 校验选中</button>
                 <button class="btn btn-outline-danger btn-sm" id="delete-selected-btn" onclick="deleteSelectedKeys()"><i class="bi bi-trash"></i> 删除选中</button>
             </div>
@@ -323,6 +327,9 @@
     // --- Data Fetching & Rendering ---
     async function fetchKeys() {
         showLoading(true);
+        const masterCheckbox = document.querySelector('thead input[type="checkbox"]');
+        if (masterCheckbox) masterCheckbox.checked = false;
+        
         try {
             const response = await fetchApi(`${API_BASE_URL}?page=${currentPage}&pageSize=${pageSize}&status=${currentStatusTab}`);
             if (!response.ok) {
@@ -517,7 +524,7 @@
         }
     }
 
-    async function checkSingleKey(id, buttonElement) {
+    async function checkSingleKey(id, buttonElement, shouldRefresh = true) {
         const icon = buttonElement.querySelector('i');
         const originalIconClass = icon.className;
         buttonElement.disabled = true;
@@ -530,7 +537,9 @@
 
             const message = result.is_valid ? `Key ${id} 有效.` : `Key ${id} 无效. 原因: ${result.reason}`;
             showToast(message, result.is_valid ? 'success' : 'error');
-            fetchKeys(); // Refresh the list to show updated status
+            if (shouldRefresh) {
+                await fetchKeys(); // Refresh the list to show updated status
+            }
         } catch (error) {
             showToast(`校验Key ${id} 失败: ${error.message}`, 'error');
         } finally {
@@ -555,16 +564,20 @@
         const checkBtn = document.getElementById('check-selected-btn');
         checkBtn.disabled = true;
 
-        for (const id of ids) {
-            const row = document.getElementById(`key-row-${id}`);
-            const button = row ? row.querySelector('.btn-outline-info') : null;
-            if (button) {
-                await checkSingleKey(id, button).catch(err => console.error(`校验 ${id} 出错:`, err));
+        try {
+            for (const id of ids) {
+                const row = document.getElementById(`key-row-${id}`);
+                const button = row ? row.querySelector('.btn-outline-info') : null;
+                if (button) {
+                    // Pass false to prevent refresh inside the loop
+                    await checkSingleKey(id, button, false).catch(err => console.error(`校验 ${id} 出错:`, err));
+                }
             }
+            showToast('所有选中 Key 校验完成。列表已自动刷新。', 'success');
+            await fetchKeys(); // Refresh once at the end
+        } finally {
+            checkBtn.disabled = false;
         }
-
-        showToast('所有选中 Key 校验完成。列表已自动刷新。', 'success');
-        checkBtn.disabled = false;
     }
 
     async function deleteKey(id) {
@@ -626,6 +639,23 @@
         scanBtn.disabled = true;
         try {
             const response = await fetchApi(`${API_BASE_URL}/scan`, { method: 'POST' });
+            const result = await response.json();
+            if (!response.ok) throw new Error(result.error || '启动扫描任务失败');
+            showToast(result.message, 'info');
+        } catch (error) {
+            showToast(`操作失败: ${error.message}`, 'error');
+        } finally {
+            scanBtn.disabled = false;
+        }
+    }
+
+    async function scanAllDisabledKeys() {
+        if (!confirm('这将触发一个后台任务来验证所有已禁用的 Key，该过程可能需要一些时间。确定要开始吗？')) return;
+
+        const scanBtn = document.getElementById('scan-disabled-btn');
+        scanBtn.disabled = true;
+        try {
+            const response = await fetchApi(`${API_BASE_URL}/scan-disabled`, { method: 'POST' });
             const result = await response.json();
             if (!response.ok) throw new Error(result.error || '启动扫描任务失败');
             showToast(result.message, 'info');
